# tauri-asset-gst-plugin

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: lib.rs
src/tauri_asset/: imp.rs  mod.rs
