[package]
name = "tauri-asset-gst-plugin"
version = "0.1.0"
authors = ["Alexander Yanovskyy <contact@yanovskyy.com"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/aaalloc/tauri-asset-gst-plugin.git"
description = "Rust Tutorial Plugin"

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }


[lib]
name = "gstassettauri"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
